@@ -18,13 +18,13 @@ lazy val commonSettings = Seq(
   organization := "com.github.haifengl",
   organizationName := "Haifeng Li",
   organizationHomepage := Some(url("https://haifengl.github.io/")),
-  version := "5.0.2",
+  version := "5.1.0",
 
   // Run in a separate JVM, to make sure sbt waits until all threads have
   // finished before returning.
   // If you want to keep the application running while executing other
   // sbt tasks, consider https://github.com/spray/sbt-revolver/
-  fork := true,
+  Test / fork := true,
 
   autoAPIMappings := true,
   Test / baseDirectory := (ThisBuild/Test/run/baseDirectory).value,
@@ -35,22 +35,17 @@ lazy val commonSettings = Seq(
     "-XX:MaxMetaspaceSize=1024M",
     "-Xss4M",
     "-Dorg.slf4j.simpleLogger.defaultLogLevel=debug",
-    //"--add-opens=java.base/java.lang=ALL-UNNAMED",
-    //"--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
     "--add-opens=java.base/java.nio=ALL-UNNAMED",
-    //"--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
-    //"--add-opens=java.base/sun.nio.cs=ALL-UNNAMED",
-    //"--add-opens=java.base/sun.security.action=ALL-UNNAMED",
     "--enable-native-access=ALL-UNNAMED"
   ),
-  Test / envVars := Map(
+  Test / envVars ++= Map(
     os match {
       case "windows" =>
-        "PATH" -> s"${(Test / baseDirectory).value}/shell/src/universal/bin;${System.getenv("PATH")}"
+        "PATH" -> s"${(Test / baseDirectory).value}/studio/src/universal/bin;${System.getenv("PATH")}"
       case "mac" =>
-        "DYLD_LIBRARY_PATH" -> s"${(Test / baseDirectory).value}/shell/src/universal/bin:${System.getenv("DYLD_LIBRARY_PATH")}"
+        "DYLD_LIBRARY_PATH" -> s"${(Test / baseDirectory).value}/studio/src/universal/bin:${System.getenv("DYLD_LIBRARY_PATH")}"
       case _ =>
-        "LD_LIBRARY_PATH" -> s"${(Test / baseDirectory).value}/shell/src/universal/bin:${System.getenv("LD_LIBRARY_PATH")}"
+        "LD_LIBRARY_PATH" -> s"${(Test / baseDirectory).value}/studio/src/universal/bin:${System.getenv("LD_LIBRARY_PATH")}"
     }
   ),
 
@@ -185,9 +180,9 @@ lazy val root = project.in(file("."))
   .settings(publish / skip := true)
   .settings(crossScalaVersions := Nil)
   .settings(
-    JavaUnidoc / unidoc / unidocProjectFilter := inAnyProject -- inProjects(json, scala, spark, shell)
+    JavaUnidoc / unidoc / unidocProjectFilter := inAnyProject -- inProjects(json, scala, spark, studio)
   )
-  .aggregate(core, base, nlp, deep, plot, json, scala, kotlin, shell, serve)
+  .aggregate(core, base, nlp, deep, plot, json, scala, kotlin, studio, serve)
 
 lazy val base = project.in(file("base"))
   .settings(javaSettings: _*)
@@ -225,7 +220,7 @@ lazy val kotlin = project.in(file("kotlin"))
   .enablePlugins(KotlinPlugin)
   .dependsOn(core, nlp)
 
-lazy val shell = project.in(file("shell"))
+lazy val studio = project.in(file("studio"))
   .settings(javaSettings: _*)
   .settings(scalaSettings: _*)
   .settings(publish / skip := true)
